--- a/portfolio/src/style/component/Contact.module.scss
+++ b/portfolio/src/style/component/Contact.module.scss
@@ -45,7 +45,7 @@ $paddingBlock: 4rem;
     }
     & input[type="submit"] {
       width: 50%;
-      height: 2.5rem;
+      height: 2.8rem;
       align-self: flex-end;
       font-size: 1.1rem;
       margin-top: .5rem;
