--- a/portfolio/src/style/component/Hero.module.scss
+++ b/portfolio/src/style/component/Hero.module.scss
@@ -12,11 +12,14 @@
     h1 {
       line-height: 1;
       letter-spacing: 0.2rem;
-      font-size: clamp(4.2rem, 6.2vw, 9rem);
+      font-size: clamp(3.5rem, 6vw, 8.5rem);
       color: $headLineColor;
     }
     .authorTitle {
-      font-size: clamp(1.6rem, 1.4vw, 3rem);
+      font-size: clamp(1.4rem, 1.4vw, 3rem);
+    }
+    @include smSize{
+      padding: 0;
     }
   }
 
